package main;

import java.math.BigDecimal;
import java.util.ArrayList;
import java.util.List;

/**
 * Represents the client that connects to our HR system.
 */
public class HumanResourcesClient {

    public HumanResourcesClient() { }

    /**
     * Returns the next five employees on our company payroll.
     *
     * @return the next five employees on our company payroll.
     */
    public List<Employee> getNextPayrollEmployees() {
        List<Employee> payroll = new ArrayList<>();
        payroll.add(new Employee(calculateSalary()));
        payroll.add(new Employee(calculateSalary()));
        payroll.add(new Employee(calculateSalary()));
        payroll.add(new Employee(calculateSalary()));
        payroll.add(new Employee(calculateSalary()));

        return payroll;
    }

    /**
     * Calculates an employee's salary.
     * @return The calculated salary.
     */
    private BigDecimal calculateSalary() {
        return BigDecimal.valueOf((Math.random() * 1000) + 100);
    }
}
